--- a/public/styles/chat.css
+++ b/public/styles/chat.css
@@ -28,7 +28,8 @@
 
 }
 .sent{
-    width: 60%;
+    width: fit-content;
+    max-width: 60%;
     margin: 20px 0 20px auto;
     background-color: brown;
     padding: 10px;
@@ -38,9 +39,11 @@
     border-bottom-right-radius: 0;
     color: rgb(255, 255, 255);
     background-color: rgb(108, 96, 221);
+    word-wrap: break-word;
 }
 .received{
-    width: 60%;
+    width: fit-content;
+    max-width: 60%;
     margin: 20px auto 20px 0;
     background-color: brown;
     padding: 10px;
@@ -50,6 +53,7 @@
     border-bottom-left-radius: 0;
     color: rgb(255, 255, 255);
     background-color: rgb(151, 150, 150);
+    word-wrap: break-word;
 }
 .received-time{
     display: block;
