--- a/src/public/styles/chat.css
+++ b/src/public/styles/chat.css
@@ -17,16 +17,19 @@
 .chats-cont{
     /* background-color: black; */
     width: 85%;
-    height: 84vh;
+    height: 76vh;
     overflow: scroll;
     display: flex;
     flex-direction: column;
     margin: auto;
+    scrollbar-width: none;
     /* align-items: center;
     align-content: center; */
-
-
 }
+.chats-cont::-webkit-scrollbar {
+    display: none; /* Hide the scrollbar */
+  }
+
 .sent{
     width: fit-content;
     max-width: 60%;
