--- a/src/public/styles/public/styles/chat.css
+++ b/src/public/styles/public/styles/chat.css
@@ -3,31 +3,36 @@
     margin: 0;
 }
 .container{
-    position: absolute;
-    height: 84vh;
+    position: fixed;
+    height: 100vh;
     width: 100%;
-    /* background-color: aqua; */
     margin-bottom: 60px;
     margin-top: 65px;
     background-color: #f9f9fa;
-    /* overflow-x: scroll; */
-    /* display: flex; */
-    
+    overflow: hidden;
+    scrollbar-width: none;
 }
+
 .chats-cont{
-    background-color: black;
     width: 85%;
     height: fit-content;
-    max-height: 60vh;
+    max-height: 84vh;
     overflow: scroll;
     display: flex;
     flex-direction: column;
     margin: auto;
     scrollbar-width: none;
-    /* align-items: center;
-    align-content: center; */
 }
-
+@media (max-height: 680px) {
+    .chats-cont{
+        max-height: 79vh;
+    }
+}
+@media (max-height: 485px) {
+    .chats-cont{
+        max-height: 74vh;
+    }
+}
 .chats-cont::-webkit-scrollbar {
     display: none; /* Hide the scrollbar */
   }
