--- a/public/styles/chat.css
+++ b/public/styles/chat.css
@@ -3,13 +3,15 @@
     margin: 0;
 }
 .container{
-    position: absolute;
+    position: fixed;
     max-height: 100vh;
     width: 100%;
     /* background-color: aqua; */
     margin-bottom: 60px;
     margin-top: 65px;
     background-color: #f9f9fa;
+    overflow: hidden;
+    scrollbar-width: none;
     /* overflow-x: scroll; */
     /* display: flex; */
     
