--- a/src/public/styles/chat.css
+++ b/src/public/styles/chat.css
@@ -6,16 +6,18 @@
     position: fixed;
     height: 100vh;
     width: 100%;
-    margin-bottom: 60px;
-    margin-top: 65px;
     background-color: #f9f9fa;
-    overflow: hidden;
 }
 
 .chats-cont{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    /* background-color: aqua; */
     width: 85%;
     height: fit-content;
-    max-height: 84vh;
+    max-height: 78vh;
     overflow: scroll;
     display: flex;
     flex-direction: column;
@@ -24,12 +26,12 @@
 }
 @media (max-height: 680px) {
     .chats-cont{
-        max-height: 79vh;
+        max-height: 70vh;
     }
 }
 @media (max-height: 485px) {
     .chats-cont{
-        max-height: 74vh;
+        max-height: 65vh;
     }
 }
 .chats-cont::-webkit-scrollbar {
@@ -85,7 +87,7 @@
     width: 100%;
     background-color: rgb(94, 81, 217);
     padding: 5px 0;
-    position: fixed;
+    position: absolute;
     top: 0;
 }
 .navbar-inner{
@@ -123,7 +125,7 @@
 
 .chat-container{
     width: 100%;
-    position: fixed;
+    position: absolute;
     bottom: 0;
     background-color: rgb(94, 81, 217);
     padding: 5px 0;
