--- a/src/public/styles/chat.css
+++ b/src/public/styles/chat.css
@@ -6,7 +6,7 @@
     position: fixed;
     height: 100vh;
     width: 100%;
-    background-color: purple;
+    background-color: red;
 }
 
 .chats-cont{
