--- a/public/styles/chat.css
+++ b/public/styles/chat.css
@@ -6,7 +6,7 @@
     position: fixed;
     height: 100vh;
     width: 100%;
-    background-color: purple;
+    background-color: #f9f9fa;
 }
 .chats-cont{
     position: absolute;
