--- a/src/public/styles/chat.css
+++ b/src/public/styles/chat.css
@@ -3,7 +3,7 @@
     margin: 0;
 }
 .container{
-    position: fixed;
+    position: absolute;
     height: 100vh;
     width: 100%;
     background-color: red;
