--- a/src/public/styles/chat.css
+++ b/src/public/styles/chat.css
@@ -6,7 +6,7 @@
     position: absolute;
     height: 100vh;
     width: 100%;
-    background-color: red;
+    background-color: #f9f9fa;
 }
 
 .chats-cont{
@@ -125,7 +125,7 @@
 
 .chat-container{
     width: 100%;
-    position: absolute;
+    position: fixed;
     bottom: 0;
     background-color: rgb(94, 81, 217);
     padding: 5px 0;
