--- a/public/styles/chat.css
+++ b/public/styles/chat.css
@@ -1,23 +1,19 @@
+
 *{
     padding: 0;
     margin: 0;
 }
 .container{
-    position: fixed;
+    display: flex;
+    flex-direction: column;
     height: 100vh;
-    width: 100%;
-    background-color: #f9f9fa;
+    background-color: #f5f5f5;
 }
+
 .chats-cont{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    /* background-color: aqua; */
     width: 85%;
-    height: fit-content;
-    max-height: 78vh;
     overflow: scroll;
+    flex: 1;
     display: flex;
     flex-direction: column;
     margin: auto;
@@ -86,8 +82,7 @@
     width: 100%;
     background-color: rgb(94, 81, 217);
     padding: 5px 0;
-    position: absolute;
-    top: 0;
+   
 }
 .navbar-inner{
     width: 90%;
@@ -124,8 +119,6 @@
 
 .chat-container{
     width: 100%;
-    position: absolute;
-    bottom: 0;
     background-color: rgb(94, 81, 217);
     padding: 5px 0;
 }
