--- a/public/styles/chat.css
+++ b/public/styles/chat.css
@@ -1,4 +1,3 @@
-
 *{
     padding: 0;
     margin: 0;
@@ -16,7 +15,7 @@
     flex: 1;
     display: flex;
     flex-direction: column;
-    margin: auto;
+    margin: 0 auto;
     scrollbar-width: none;
 }
 @media (max-height: 680px) {
