--- a/public/styles/chat.css
+++ b/public/styles/chat.css
@@ -95,6 +95,8 @@
 }
 .navbar-inner ul li img{
     width: 50px;
+    height: 50px;
+    border-radius: 100%;
 }
 .navbar-inner ul .profile{
     display: flex;
