--- a/public/styles/chatroom.css
+++ b/public/styles/chatroom.css
@@ -25,6 +25,8 @@
 .user-image-cont img{
   display: block;
   width: 50px;
+  height: 50px;
+  border-radius: 100%;
 }
 .user-image-cont .edit-icon{
   display: flex;
@@ -125,6 +127,8 @@
   }
   .chat-cont ul li span img{
     width: 50px;
+    height: 50px;
+    border-radius: 100%;
   }
   .chat-cont ul li .username{
     font-family: sans-serif;
@@ -140,6 +144,8 @@
   }
   .searched-contact img{
     width: 50px;
+    height: 50px;
+    border-radius: 100%;
   }
   .searched-contact .username{
     font-family: sans-serif;
