--- a/public/styles/profile.css
+++ b/public/styles/profile.css
@@ -1,6 +1,6 @@
 .profile-container{
     width: 100%;
-    /* height: 100vh; */
+    height: 100dvh;
     margin: auto;
     background-color: #f5f5f5;
 }
