--- a/public/styles/chat.css
+++ b/public/styles/chat.css
@@ -5,7 +5,7 @@
 .container{
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    height: 100dvh;
     background-color: #f5f5f5;
 }
 
@@ -18,7 +18,7 @@
     margin: 0 auto;
     scrollbar-width: none;
 }
-@media (max-height: 680px) {
+/* @media (max-height: 680px) {
     .chats-cont{
         max-height: 70vh;
     }
@@ -27,7 +27,7 @@
     .chats-cont{
         max-height: 65vh;
     }
-}
+} */
 .chats-cont::-webkit-scrollbar {
     display: none; /* Hide the scrollbar */
   }
