--- a/src/public/styles/chat.css
+++ b/src/public/styles/chat.css
@@ -3,28 +3,22 @@
     margin: 0;
 }
 .container{
-    position: absolute;
-    height: 100vh;
-    width: 100%;
-    background-color: #f9f9fa;
+    display: flex;
+    flex-direction: column;
+    height: 100dvh;
+    background-color: #f5f5f5;
 }
 
 .chats-cont{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    /* background-color: aqua; */
     width: 85%;
-    height: fit-content;
-    max-height: 78vh;
     overflow: scroll;
+    flex: 1;
     display: flex;
     flex-direction: column;
-    margin: auto;
+    margin: 0 auto;
     scrollbar-width: none;
 }
-@media (max-height: 680px) {
+/* @media (max-height: 680px) {
     .chats-cont{
         max-height: 70vh;
     }
@@ -33,7 +27,7 @@
     .chats-cont{
         max-height: 65vh;
     }
-}
+} */
 .chats-cont::-webkit-scrollbar {
     display: none; /* Hide the scrollbar */
   }
@@ -87,7 +81,7 @@
     width: 100%;
     background-color: rgb(94, 81, 217);
     padding: 5px 0;
-    position: absolute;
+    position: sticky;
     top: 0;
 }
 .navbar-inner{
@@ -101,6 +95,8 @@
 }
 .navbar-inner ul li img{
     width: 50px;
+    height: 50px;
+    border-radius: 100%;
 }
 .navbar-inner ul .profile{
     display: flex;
@@ -123,12 +119,15 @@
     cursor: pointer;
 }
 
+
+
 .chat-container{
     width: 100%;
-    position: fixed;
-    top: 0;
     background-color: rgb(94, 81, 217);
     padding: 5px 0;
+    position: sticky;
+    bottom: 0;
+    z-index: 1;
 }
 .chat-inner{
     width: 90%;
